# membridge

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  membridge.pyi  pyproject.toml
.github/workflows/: ci.yml
examples/: consumer.py  producer.py  single_process.py  spsc_consumer.py  spsc_producer.py
src/: error.rs  lib.rs  mapped_view.rs  mixed.rs  rwlock.rs  shared_memory.rs  spsc.rs
src/platform/: mod.rs  unix.rs  win32.rs
