[package]
name = "membridge"
version = "0.1.3"
edition = "2024"

[lib]
name = "membridge"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3-py310", "generate-import-lib"] }
parking_lot = "0.12"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.2", features = ["mman", "fs"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
] }

[target.'cfg(any(unix, windows))'.dependencies]
bytemuck = "1"
